// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package intrinsic.build_def.testing;

message SubMessage {
  // Your favorite double of all time.
  optional double my_double = 1;
}
